hphp/hack/test/typecheck/reactive/print_in_rx8.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__RxLocal>>
function rxlocal(): void {
  // ERROR
  print 1;
}
